# Maestria_Vision

./: README.md  comando_modificar_altura.txt
src/bebop_homography/: CMakeLists.txt  package.xml
src/bebop_homography/scripts/: Bluerov2Control.py  bebop_camera_python.py  bebop_homography_orb.py  bebop_homography_sift.py  bebop_homography_track.py  bebop_homography_track_distance.py  bebop_listener.py  teleop_twist_keyboard.py
src/bebop_xbox/: CMakeLists.txt  package.xml
src/bebop_xbox/scripts/: bebop_python.py  camera_python.py  get_xbox_2.py
src/bebop_xbox/src/: bebop_fly_controller.cpp
